# win-vibe-island

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  LOGGING_CONTRACT.md  PLAN_PHASE2.md  README.md  TASK.md  WORKFLOW.md  architecture.md  executor.md  init.sh  progress.txt  task.json  verifier.md
.claude/: settings.json  settings.local.json
.claude/rules/: ArchitectureConstraints.md  ErrorHandlingConvention.md  FrontendConvention.md  RustConvention.md  TauriIPCConvention.md
.claude/skills/animation/: SKILL.md
.claude/skills/barricade/: SKILL.md
.claude/skills/claude-design/: SKILL.md
.claude/skills/command-spec/: SKILL.md
.claude/skills/doc-gate/: SKILL.md
.claude/skills/frontend-dev/: SKILL.md
.claude/skills/hook-integration/: SKILL.md
.claude/skills/openspec-propose/: SKILL.md
.claude/skills/overlay-debug/: SKILL.md
.claude/skills/release/: SKILL.md  release.sh
.claude/skills/run/: SKILL.md
.claude/skills/session-flow/: SKILL.md
.claude/skills/state-machine/: SKILL.md
.claude/skills/tauri-command/: SKILL.md
.claude/skills/tauri-event/: SKILL.md
.claude/skills/testing/: SKILL.md
.claude/workflows/doc-gate/: doc-gate.md
.github/workflows/: ci.yml  release.yml
.playwright-mcp/: page-2026-04-26T10-25-20-752Z.yml
agent-sdk/node/: .npmignore  README.md  package-lock.json  package.json  tsconfig.json
agent-sdk/node/src/: client.ts  index.ts  types.ts
agent-sdk/python/: README.md  pyproject.toml
agent-sdk/python/src/vibe_island_sdk/: __init__.py  client.py  py.typed  types.py
agents/: executor.md  verifier.md
docs/: README.md  animation-design.md  backlog.md  cc-experience-improvement.md  claude-settings.example.json  command-registry-design.md  diffviewer-spec.md  hooks-setup.md  jump-terminal-v2-design.md  open-island-alignment-prd.md  release-process.md  research-dynamic-island-animation.md  states-and-flows.md  testing-strategy.md  testing.md  ux-optimization-prd.md  v8-migration-plan.md
docs/architecture/: animation-design.md  diffviewer-spec.md  state-machine.md  states-and-flows.md
docs/archive/: research-windows-window-management.md
docs/design/: design-tokens.json  ux-optimization-prd.md
docs/design/artifacts/: README.md
docs/design/specs/: TEMPLATE.md  approval-panel-spec.md  control-center-spec.md  diff-viewer-spec.md  jump-toast-spec.md  notch-row-spec.md  overlay-spec.md  pill-spec.md  session-list-spec.md  settings-panel-spec.md  status-indicator-spec.md
docs/history/: progress.txt
docs/hooks/: codex-hooks-setup.md
docs/operations/: release-process.md
docs/testing/: comprehensive-test-and-state-audit.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
frontend/.ladle/: components.tsx  config.mjs
frontend/src/: App.tsx  index.css  main.tsx  test-bridge.ts
frontend/src/__tests__/: error-handling.test.ts  setup.ts  state-machine.test.ts
frontend/src/client/: error-boundary.tsx  index.ts  logger.ts  use-logger.ts
frontend/src/components/: ActivityTimeline.css  ActivityTimeline.tsx  AgentDot.css  AgentIcon.tsx  AnimatedNotch.tsx  AnimatedOverlay.tsx  ApprovalPanel.css  ApprovalPanel.stories.tsx  ApprovalPanel.tsx  ApprovalQueue.css  BarsGlyph.css  BarsGlyph.tsx  BarsGlyph.utils.ts  BboxSpike.tsx  CommandAnalysis.css  CommandAnalysis.tsx  ControlCenter.css  ControlCenter.tsx  DiffViewer.css  DiffViewer.stories.tsx  DiffViewer.tsx  ErrorLog.css  ErrorLog.tsx  (+40 more)
openspec/: config.yaml
scripts/: check-design-compliance.js  config-sync.js  doc-gate.js  plan_batches.py  release.js  select_next_task.py  task-commands.js  validate_iteration.py
scripts/lib/: constants.js  helpers.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.claude/: settings.json
src-tauri/capabilities/: default.json
src-tauri/sounds/: README.md
src-tauri/src/: agent_event.rs  agent_session.rs  approval_types.rs  audio.rs  claude_usage.rs  codex_hook_config.rs  command_analyzer.rs  commands.rs  events.rs  hook_config.rs  hook_manifest.rs  hook_server.rs  lib.rs  logger.rs  mock.rs  overlay.rs  pipe_server.rs  process_watcher.rs  session_state.rs  session_store.rs  transcript_discovery.rs  window_focus.rs  window_manager.rs
src-tauri/src/adapters/: claude_adapter.rs  codex_adapter.rs  mod.rs
src-tauri/src/command_specs/: 7z.toml  _risk_patterns.toml  awk.toml  bzip2.toml  cargo.toml  cat.toml  chmod.toml  chown.toml  clang.toml  cmake.toml  cp.toml  cut.toml  deno.toml  df.toml  diff.toml  docker.toml  download.toml  du.toml  echo.toml  env.toml  ffmpeg.toml  find.toml  gcc.toml  git.toml  go.toml  grep.toml  gzip.toml  head.toml  jq.toml  kill.toml  kubectl.toml  ln.toml  ls.toml  make.toml  mkdir.toml  mv.toml  mvn.toml  node.toml  openssl.toml  package.toml  (+26 more)
src-tauri/src/config/: loader.rs  mod.rs  types.rs
src-tauri/src/terminal_jump/: mod.rs  registry.rs  resolver.rs  service.rs  snapshot.rs
src-tauri/src/terminal_jump/strategies/: cli_workspace.rs  mod.rs  pid_fallback.rs  windows_terminal.rs  workspace_match.rs
src-tauri/tests/: hook_server_integration.rs
tests/: browser-v8-test.js
tests/e2e/: detect-window.ps1  hook-e2e.sh  package-lock.json  package.json  playwright.config.ts  task.json
tests/scripts/: tauri-diffviewer-smoke-gitbash.sh  tauri-diffviewer-smoke.sh
tools/: gen-specs-from-tldr.mjs
(+109 files in other folders)
