[package]
name = "app"
version = "0.1.0"
description = "Vibe Island - A Windows desktop overlay for AI coding agents"
authors = ["Vibe Island Team"]
license = "MIT"
repository = "https://github.com/vibeisland/vibe-island"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "net", "io-util"] }
parking_lot = "0.12"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_System_Threading", "Win32_System_Diagnostics_ToolHelp", "Win32_UI_HiDpi"] }
[dev-dependencies]
tokio-test = "0.4"

# Add test module for hook_server
